--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
+alembic==1.7.5
+anyio==4.8.0
+astor==0.8.1
+beautifulsoup4==4.12.3
+black==24.10.0
+bs4==0.0.2
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+fastapi==0.115.6
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+injector==0.22.0
+Mako==1.3.8
+MarkupSafe==3.0.2
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
+pydantic==1.10.21
 pynest-api==0.3.0
-requests~=2.31.0
-bs4~=0.0.1
-beautifulsoup4~=4.12.2b
+python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.31.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.19
+starlette==0.41.3
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
